--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -63,13 +63,20 @@
 
     // 5. Sort the inventors by years lived
 
-    const yearsLived = inventors.sort((a, b) => ((a.passed - a.year) - (b.passed - b.year)));
-    console.log(yearsLived);
-    
+    //const yearsLived = inventors.sort((a, b) => ((a.passed - a.year) - (b.passed - b.year)));
+    //console.log(yearsLived);
+
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
-    // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+    //https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
+    //code to run inside DOM:
+    const category = document.querySelector('.mw-category');
+    const links = Array.from(category.querySelectorAll('a'));
+    const de = links
+              .map(link => link.textContent)
+              .filter(streetName => streetName.includes('de'));
+    console.log(de);
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
