--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -71,15 +71,18 @@
     //https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
     //code to run inside DOM:
-    const category = document.querySelector('.mw-category');
-    const links = Array.from(category.querySelectorAll('a'));
-    const de = links
-              .map(link => link.textContent)
-              .filter(streetName => streetName.includes('de'));
-    console.log(de);
+    //const category = document.querySelector('.mw-category');
+    //const links = Array.from(category.querySelectorAll('a'));
+    //const de = links
+              //.map(link => link.textContent)
+              //.filter(streetName => streetName.includes('de'));
+    //console.log(de);
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+
+    const byLastName = people.sort();
+    console.log(byLastName);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
