--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -81,12 +81,21 @@
     // 7. sort Exercise
     // Sort the people alphabetically by last name
 
-    const byLastName = people.sort();
-    console.log(byLastName);
+    //const byLastName = people.sort();
+    //console.log(byLastName);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+
+    const itemOccurence = data.reduce(function(obj, item) {
+      if (!obj[item]) {
+        obj[item] = 0;
+      }
+      obj[item]++;
+      return obj;
+    }, {});
+    console.log(itemOccurence);
 
   </script>
 </body>
