--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -27,7 +27,14 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+
+    let currentYear = 2024;
+    const nineteen = (element) => (currentYear - element.year) >= 19;
+    console.log(people.some(nineteen));
+
     // Array.prototype.every() // is everyone 19 or older?
+
+    console.log(people.every(nineteen));
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
