--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -28,17 +28,20 @@
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
 
-    let currentYear = 2024;
-    const nineteen = (element) => (currentYear - element.year) >= 19;
-    console.log(people.some(nineteen));
+    //let currentYear = 2024;
+    //const nineteen = (element) => (currentYear - element.year) >= 19;
+    //console.log(people.some(nineteen));
 
     // Array.prototype.every() // is everyone 19 or older?
 
-    console.log(people.every(nineteen));
+    //console.log(people.every(nineteen));
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+
+    const found = comments.find((element) => element.id === 823423);
+    console.log(found);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
