Solve .findIndex exercise

--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -40,12 +40,19 @@
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
 
-    const found = comments.find((element) => element.id === 823423);
-    console.log(found);
+    //const found = comments.find((element) => element.id === 823423);
+    //console.log(found);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+
+    const found = comments.findIndex((element) => element.id === 823423);
+    console.log(found); // returned 1
+
+    comments.splice(1, 1);
+    console.log(comments);
+
 
   </script>
 </body>
